examples/test/testpolicy8041.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8041
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key18: value45
      key11: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value6
          key26: value5
          key48: value34
      podSelector:
        matchLabels:
          key10: value8
          key3: value3
